[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgequeue"
version = "0.1.0"
description = "Redis-backed job queue with retries and scheduling"
requires-python = ">=3.10"
dependencies = ["redis>=5.0.0"]

[tool.setuptools.packages.find]
where = ["."]
